add: 引入智谱Ai的API, 编写apiKey的properties配置读取类, 编写测试智谱API初步调用的测试类

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,8 @@ spring:
     database: 2
   jackson:
     default-property-inclusion: non_null # JSON处理时忽略非空字段
+  profiles:
+    active: local
 logging:
   level:
     com.snwolf: debug
